fixed z-index

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -35,6 +35,7 @@
   border: none;
   padding: 0;
   overflow: hidden;
+  z-index: 11;
 
   display: flex;
   flex-direction: column;
